# VolumetricEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  glad.c  setup.sh  vendor.cpp
assets/shaders/: fragment.glsl  fragment_texture.glsl  vertex.glsl  vertex_texture.glsl
core/: Application.cpp  Application.hpp  GameLayer.cpp  GameLayer.hpp  GuiLayer.cpp  GuiLayer.hpp  Layer.cpp  Layer.hpp  Scene.cpp  Scene.hpp  Window.cpp  Window.hpp  main.cpp
renderer/: Buffers.cpp  Buffers.hpp  Camera.hpp  Primitive.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  camera.cpp  camera.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
